--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ os:
   - linux
 before_install:
   - sudo apt-get update -qq
-  - wget http://www.scilab.org/download/5.5.1/scilab-5.5.1.bin.linux-x86_64.tar.gz -O scilab.tar.gz;
+  - wget http://www.scilab.org/download/6.0.0-beta-1/scilab-6.0.0-beta-1.bin.linux-x86_64.tar.gz -O scilab.tar.gz;
   - tar xfz scilab.tar.gz;
-  - export PATH="$PWD/scilab-5.5.1/bin:$PATH";
+  - export PATH="$PWD/scilab-6-0-0-beta-1/bin:$PATH";
   - scilab -version; true
 script:
   - scilab -nwni -e 'result = exec("builder.sce", "errcatch"); exit(result)'
