--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ before_install:
   - export PATH="$PWD/scilab-6.0.0-beta-1/bin:$PATH";
   - scilab -version; true
 script:
-  - scilab -nwni -e 'result = exec("builder.sce", "errcatch"); exit(result)'
-  - scilab -nwni -e 'result = exec("loader.sce", "errcatch"); exec("runtests.sce", "errcatch"); exit(result)'
-  - scilab -nwni -e 'result = exec("cleaner.sce", "errcatch"); exit(result)'
+  - scilab -nwni -e "result = exec("""builder.sce""", """errcatch"""); exit(result)"
+  - scilab -nwni -e "result = exec("""loader.sce""", """errcatch"""); exec("""runtests.sce""", """errcatch"""); exit(result)"
+  - scilab -nwni -e "result = exec("""cleaner.sce""", """errcatch"""); exit(result)"
