--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ os:
   - linux
 before_install:
   - sudo apt-get update -qq
-  - wget http://www.scilab.org/download/6.0.0-beta-1/scilab-6.0.0-beta-1.bin.linux-x86_64.tar.gz -O scilab.tar.gz;
+  - wget http://www.scilab.org/download/5.5.2/scilab-5.5.2.bin.linux-x86_64.tar.gz -O scilab.tar.gz;
   - tar xfz scilab.tar.gz;
-  - export PATH="$PWD/scilab-6.0.0-beta-1/bin:$PATH";
+  - export PATH="$PWD/scilab-5.5.2/bin:$PATH";
   - scilab -version; true
 script:
-  - scilab -nwni -e "result = exec("""builder.sce""", """errcatch"""); exit(result)"
-  - scilab -nwni -e "result = exec("""loader.sce""", """errcatch"""); exec("""runtests.sce""", """errcatch"""); exit(result)"
-  - scilab -nwni -e "result = exec("""cleaner.sce""", """errcatch"""); exit(result)"
+  - scilab -nwni -e 'result = exec("builder.sce", "errcatch"); exit(result)'
+  - scilab -nwni -e 'result = exec("loader.sce", "errcatch"); exec("runtests.sce", "errcatch"); exit(result)'
+  - scilab -nwni -e 'result = exec("cleaner.sce", "errcatch"); exit(result)'
