--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ before_install:
   - wget http://www.scilab.org/download/5.5.2/scilab-5.5.2.bin.linux-x86_64.tar.gz -O scilab.tar.gz;
   - tar xfz scilab.tar.gz;
   - export PATH="$PWD/scilab-5.5.2/bin:$PATH";
+  - mkdir $PWD/tmp;
+  - export TMPDIR="$PWD/tmp";
   - scilab -version; true
 script:
   - scilab -nwni -e 'result = exec("builder.sce", "errcatch"); exit(result)'
