--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,14 @@ dist: trusty
 language: cpp
 os:
   - linux
+  - osx
+addons:
+  apt:
+    packages:
+      - scilab
 before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -y scilab
-  - scilab -version; true
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install install; fi
 script:
   - scilab -nwni -e 'result = exec("builder.sce", "errcatch"); exit(result)'
   - scilab -nwni -e 'result = exec("loader.sce", "errcatch"); exec("runtests.sce", "errcatch"); exit(result)'
