--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,14 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then hdiutil mount scilab-5.5.2.1-x86_64.dmg; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export SCILAB='/Volumes/InstallBuilder Enterprise/scilab-5.5.2.app/Contents/MacOS/bin/scilab'; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then  brew tap caskroom/versions; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install java6; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then scilab -version; true; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then '/Volumes/scilab-5.5.2/scilab-5.5.2.app/Contents/MacOS/bin/scilab' -version; true; fi
 script:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then scilab -nwni -e 'result = exec("builder.sce", "errcatch"); exit(result)'; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then scilab -nwni -e 'result = exec("cleaner.sce", "errcatch"); exit(result)'; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then scilab -nwni -e 'result = exec("loader.sce", "errcatch"); exec("runtests.sce", "errcatch"); exit(result)'; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then scilab -nwni -e 'result = exec("cleaner.sce", "errcatch"); exit(result)'; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then '/Volumes/scilab-5.5.2/scilab-5.5.2.app/Contents/MacOS/bin/scilab' -nwni -e 'result = exec("builder.sce", "errcatch"); exit(result)'; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then '/Volumes/scilab-5.5.2/scilab-5.5.2.app/Contents/MacOS/bin/scilab' -nwni -e 'result = exec("cleaner.sce", "errcatch"); exit(result)'; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then '/Volumes/scilab-5.5.2/scilab-5.5.2.app/Contents/MacOS/bin/scilab' -nwni -e 'result = exec("loader.sce", "errcatch"); exec("runtests.sce", "errcatch"); exit(result)'; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then '/Volumes/scilab-5.5.2/scilab-5.5.2.app/Contents/MacOS/bin/scilab' -nwni -e 'result = exec("cleaner.sce", "errcatch"); exit(result)'; fi
