--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export SCILAB='/Volumes/InstallBuilder Enterprise/scilab-5.5.2.app/Contents/MacOS/bin/scilab'; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then  brew tap caskroom/versions; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install java6; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install Caskroom/versions/java6; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then scilab -version; true; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then '/Volumes/scilab-5.5.2/scilab-5.5.2.app/Contents/MacOS/bin/scilab' -version; true; fi
 script:
