--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,8 +4,8 @@ install:
   - choco install -y scilab
   - setx path "%path%;C:\Program Files\scilab-5.5.2\bin\;"
   - SET PATH=C:\Program Files\scilab-5.5.2\bin;%PATH%
- build_script:
-  - Scilex -nwni -e "result = exec("""builder.sce""", """errcatch"""); exit(result)"
- test_script:
+build_script:
+  - Scilex -nw -e "result = exec("""builder.sce""", """errcatch"""); exit(result)"
+test_script:
   - Scilex -nwni -e "result = exec("""loader.sce""", """errcatch"""); exec("""runtests.sce""", """errcatch"""); exit(result)"
   - Scilex -nwni -e "result = exec("""cleaner.sce""", """errcatch"2"); exit(result)"
