--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ before_install:
 script:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then scilab -nw -e 'result = exec("builder.sce", "errcatch"); exit(result)'; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then scilab -nwni -e 'result = exec("loader.sce", "errcatch"); exec("runtests.sce", "errcatch"); exit(result)'; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then scilab -nwni -e 'result = exec("cleaner.sce", "errcatch"); exit(result)'; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cd ..\; mv swt swt_0.3.1; tar cfvz swt_0.3.1-0.bin.x86_64.linux.tar.gz swt_0.3.1; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then '/Volumes/scilab-5.5.2/scilab-5.5.2.app/Contents/MacOS/bin/scilab' -nw -e 'result = exec("builder.sce", "errcatch"); exit(result)'; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then '/Volumes/scilab-5.5.2/scilab-5.5.2.app/Contents/MacOS/bin/scilab' -nwni -e 'result = exec("loader.sce", "errcatch"); exec("runtests.sce", "errcatch"); exit(result)'; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then '/Volumes/scilab-5.5.2/scilab-5.5.2.app/Contents/MacOS/bin/scilab' -nwni -e 'result = exec("cleaner.sce", "errcatch"); exit(result)'; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then cd ..\; mv swt swt_0.3.1; tar cfvz swt_0.3.1-0.bin.x86_64.darwin.tar.gz swt_0.3.1; fi
